Correción de errores y mejoras en el recurso de item