@@ -6,38 +6,34 @@ import com.example.spum_backend.entity.Item;
 import com.example.spum_backend.entity.ItemType;
 import com.example.spum_backend.exception.ItemNotFoundException;
 import com.example.spum_backend.exception.ItemTypeNotFoundException;
+import com.example.spum_backend.mapper.ItemMapper;
 import com.example.spum_backend.repository.ItemRepository;
 import com.example.spum_backend.repository.ItemTypeRepository;
 import com.example.spum_backend.service.interfaces.ItemService;
 import com.example.spum_backend.service.interfaces.internal.ItemServiceEntity;
 import com.example.spum_backend.service.interfaces.internal.ItemTypeServiceEntity;
+import lombok.AllArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
-
+@AllArgsConstructor
 public class ItemServiceImpl implements ItemService, ItemServiceEntity {
 
     private final ItemRepository itemRepository;
     private final ModelMapper modelMapper;
-    private final ItemTypeRepository itemTypeRepository;
+    private final ItemMapper itemMapper;
     private final ItemTypeServiceEntity itemTypeService;
 
-    public ItemServiceImpl(ItemRepository itemRepository, ModelMapper modelMapper, ItemTypeRepository itemTypeRepository, ItemTypeServiceEntity itemTypeService) {
-        this.itemRepository = itemRepository;
-        this.modelMapper = modelMapper;
-        this.itemTypeRepository = itemTypeRepository;
-        this.itemTypeService = itemTypeService;
-    }
 
     @Override
     public List<ItemResponseDTO> findAllItems() {
         return itemRepository.findAll()
-                .stream().map(item -> modelMapper.map(item, ItemResponseDTO.class))
-                .collect(Collectors.toList());
+                .stream().map(itemMapper::toDto).toList();
     }
 
     @Override
@@ -46,6 +42,16 @@ public class ItemServiceImpl implements ItemService, ItemServiceEntity {
         return modelMapper.map(item, ItemResponseDTO.class);
     }
 
+    @Override
+    public List<ItemResponseDTO> findItemByName(String nombre) {
+        List<Item> items = itemRepository.findByItemNameContainingIgnoreCase(nombre);
+        if (items.isEmpty()) {
+            throw new ItemNotFoundException("No se encontró ningún item con el nombre que contiene: " + nombre);
+        }
+        return items.stream()
+                .map(itemMapper::toDto)
+                .toList();
+    }
     @Override
     public ItemResponseDTO addItem(ItemRequestDTO item) {
         Item itemToSave = modelMapper.map(item, Item.class);
